# velar-contracts

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
contracts/velar-bond/: Cargo.toml
contracts/velar-bond/src/: README.md  lib.rs  test.rs
docs/: DEPLOY.md  SECURITY.md
