[package]
name = "velar-bond"
version = "0.1.0"
edition = "2021"
publish = false
description = "VELAR bond as a Soroban smart contract (Stellar testnet)"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
